<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_company_name"
        android:layout_width="match_parent"
        android:layout_margin="8dp"
        android:layout_above="@id/btn_search"
        android:layout_alignParentTop="true"
        android:layout_height="wrap_content">
    </android.support.v7.widget.RecyclerView>

    <Button
        android:id="@+id/btn_refresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/btn_search"
        android:layout_marginEnd="44dp"
        android:onClick="getRefresh"
        android:text="@string/refresh"
        android:layout_alignParentRight="true"
        android:layout_marginRight="44dp" />

    <TextView
        android:id="@+id/tv_credit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin= "24dp"
        android:text="@string/micky_mouse_productions"
        android:layout_alignParentBottom="true"/>

    <EditText
        android:id="@+id/et_company_name"
        android:layout_width="141dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="189dp"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:ems="6"
        android:hint="@string/name"
        android:inputType="text" />

    <EditText
        android:id="@+id/et_owner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/et_company_name"
        android:layout_marginEnd="30dp"
        android:ems="6"
        android:hint="@string/owner"
        android:textAlignment="center"
        android:inputType="textPersonName"
        android:layout_alignParentRight="true"
        android:layout_marginRight="35dp" />

    <Button
        android:id="@+id/btn_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="100dp"
        android:layout_marginStart="44dp"
        android:onClick="get_company_name"
        android:text="@string/search"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="44dp" />
</RelativeLayout>
